--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "dependencies": {
-    "react": "^18.1.0",
-    "react-redux": "^8.0.1",
-    "redux": "^4.2.0"
-  }
+    "cors": "^2.8.5",
+    "cros": "^1.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "fast-two-sms": "^3.0.0",
+    "nexmo": "^2.9.1",
+    "node-mailjet": "^3.4.1",
+    "nodemon": "^2.0.16",
+    "textmagic-rest-client": "^1.0.11"
+  },
+  "name": "server-part",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "server",
+  "license": "ISC",
+  "description": ""
 }
